--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"scripts": {
 		"start": "ts-node src/bot.ts"
 	},
+	"engines": {
+  	"node": "16.x"
+	},
 	"dependencies": {
 		"@line/bot-sdk": "^7.5.2",
 		"discord.js": "^14.11.0",
