--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
 		"start": "ts-node src/bot.ts"
 	},
 	"engines": {
-  	"node": "16.x"
+		"node": "16.x"
 	},
 	"dependencies": {
 		"@line/bot-sdk": "^7.5.2",
 		"discord.js": "^14.11.0",
 		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
 		"ts-node": "^10.9.1"
 	},
 	"devDependencies": {
