--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 	},
 	"dependencies": {
 		"@line/bot-sdk": "^7.5.2",
+		"axios": "^1.4.0",
 		"discord.js": "^14.11.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"querystring": "^0.2.1",
 		"ts-node": "^10.9.1"
 	},
 	"devDependencies": {
